# wow-server-dashboard

./: .dockerignore  .gitignore  App.tsx  DEPLOY_INSTRUCTIONS.md  Dockerfile  constants.ts  docker-compose.yml  download_maps.sh  index.css  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package.json  setup-vps.sh  translations.ts  types.ts
components/: AboutPage.tsx  AdminPage.tsx  AuthPage.tsx  CharacterCard.tsx  Chatbot.tsx  CommunityPage.tsx  DownloadsPage.tsx  EventsPage.tsx  Header.tsx  HomePage.tsx  NewsPage.tsx  RankingPage.tsx  ThemeToggle.tsx
context/: AuthContext.tsx  I18nContext.tsx  ThemeContext.tsx
deployment/: FIX-COMMANDS.md  MANUAL-CHECK.md  README.md  RESUMO-SESSAO.md  SSH-GUIDE.md  backup-db.sh  check-status.sh  deploy.sh  diagnostico.sh  fix-server.sh  port-forwarding-guide.sh  quick-check.sh  secure-mysql.sh  setup-server.sh  test-connectivity.sh
docs/: DEPLOY_UBUNTU.md
server/: .env.example  index.js  package-lock.json  package.json
server-rust/: Cargo.toml  Dockerfile  setup_database.sql
server-rust/src/: handlers.rs  main.rs  models.rs
server/server/data/: forum.json
services/: adminService.ts  authService.ts  databaseService.ts  eventsService.ts  forumService.ts  geminiService.ts  profileService.ts
