[package]
name = "wow-dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
sha1 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = "0.8"
# Fix for edition 2024 dependencies
base64ct = "=1.6.0"
home = "=0.5.9"
